src/styles/App.less
@import '~antd/dist/antd.less';

.ant-layout-content {
  background-size: 58px 58px;
  background-position: 0px 2px, 4px 35px, 29px 31px, 33px 6px,
  0px 36px, 4px 2px, 29px 6px, 33px 30px;
  background-image:
  linear-gradient(335deg, #C90032 3px, transparent 3px),
  linear-gradient(155deg, #C90032 3px, transparent 3px),
  linear-gradient(335deg, #C90032 3px, transparent 3px),
  linear-gradient(155deg, #C90032 3px, transparent 3px),

  linear-gradient(335deg, #C90032 1px, transparent 1px),
  linear-gradient(155deg, #C90032 1px, transparent 1px),
  linear-gradient(335deg, #C90032 1px, transparent 1px),
  linear-gradient(155deg, #C90032 1px, transparent 1px);
}

body::-webkit-scrollbar {
  width: .5rem;
}

::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
  background-color: red;
  border-radius: .25rem;
  border: .125rem solid red;
}

.layout-main {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.layout-content {
    //min-height: 100vh;
    flex: 1 0 auto;
}

.content-wrapper {
  min-height: 100vh;
  padding: 2rem 1rem 2rem 1rem;
}

