removed dark mode due to bugs on loader

--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -1,19 +1,7 @@
 @import '~antd/dist/antd.less';
 
 .ant-layout-content {
-  background-size: 58px 58px;
-  background-position: 0px 2px, 4px 35px, 29px 31px, 33px 6px,
-  0px 36px, 4px 2px, 29px 6px, 33px 30px;
-  background-image:
-  linear-gradient(335deg, #C90032 3px, transparent 3px),
-  linear-gradient(155deg, #C90032 3px, transparent 3px),
-  linear-gradient(335deg, #C90032 3px, transparent 3px),
-  linear-gradient(155deg, #C90032 3px, transparent 3px),
 
-  linear-gradient(335deg, #C90032 1px, transparent 1px),
-  linear-gradient(155deg, #C90032 1px, transparent 1px),
-  linear-gradient(335deg, #C90032 1px, transparent 1px),
-  linear-gradient(155deg, #C90032 1px, transparent 1px);
 }
 
 body::-webkit-scrollbar {
